[package]
name = "sion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
dptree = "0.3.0"
knuffel = "3.2.0"
miette = "7.2.0"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0.215"
serde_json = "1.0.133"
teloxide = { git = "https://github.com/teloxide/teloxide.git", default-features = false, features = ["rustls", "macros"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["chrono"] }

